RESOLVED FIXED210959
Proxy.revocable should not have [[Construct]] slot
https://bugs.webkit.org/show_bug.cgi?id=210959
Summary Proxy.revocable should not have [[Construct]] slot
Alexey Shvayka
Reported 2020-04-24 01:54:32 PDT
Proxy.revocable should not have [[Construct]] slot
Attachments
Patch (6.83 KB, patch)
2020-04-24 01:56 PDT, Alexey Shvayka
no flags
Alexey Shvayka
Comment 1 2020-04-24 01:56:15 PDT
EWS
Comment 2 2020-04-24 10:53:30 PDT
Committed r260654: <https://trac.webkit.org/changeset/260654> All reviewed patches have been landed. Closing bug and clearing flags on attachment 397440 [details].
Radar WebKit Bug Importer
Comment 3 2020-04-24 10:54:15 PDT
Note You need to log in before you can comment on or make changes to this bug.