Proxy.revocable should not have [[Construct]] slot https://bugs.webkit.org/show_bug.cgi?id=210959

Reviewed by Darin Adler.

JSTests:

* stress/proxy-revoke.js:
* test262/expectations.yaml: Mark 2 test cases as passing.

Source/JavaScriptCore:

This change removes proxyRevocableConstructorThrowError() since its presence is
observable when, for example, Proxy.revocable is a [[ProxyTarget]] itself [1].
Also removes unnecessary newTarget() check in constructProxyObject() and
2 extra ArgList instances.

This patch aligns JSC with the spec [2], V8 and SpiderMonkey.

[1]: https://tc39.es/ecma262/#sec-proxycreate (step 7.b)
[2]: https://tc39.es/ecma262/#sec-ecmascript-standard-built-in-objects

* runtime/ProxyConstructor.cpp:
(JSC::makeRevocableProxy):
(JSC::ProxyConstructor::finishCreation):
(JSC::constructProxyObject):
(JSC::proxyRevocableConstructorThrowError): Deleted.


Canonical link: https://commits.webkit.org/223863@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260654 268f45cc-cd09-0410-ab3c-d52691b4dbfc