Source/JavaScriptCore/runtime/ProxyConstructor.cpp
@@ -63,45 +63,32 @@ static EncodedJSValue JSC_HOST_CALL makeRevocableProxy(JSGlobalObject* globalObj
     if (callFrame->argumentCount() < 2)
         return throwVMTypeError(globalObject, scope, "Proxy.revocable needs to be called with two arguments: the target and the handler"_s);
 
-    ArgList args(callFrame);
-    JSValue target = args.at(0);
-    JSValue handler = args.at(1);
+    JSValue target = callFrame->argument(0);
+    JSValue handler = callFrame->argument(1);
     ProxyObject* proxy = ProxyObject::create(globalObject, target, handler);
     RETURN_IF_EXCEPTION(scope, encodedJSValue());
     ProxyRevoke* revoke = ProxyRevoke::create(vm, globalObject->proxyRevokeStructure(), proxy);
-    RETURN_IF_EXCEPTION(scope, encodedJSValue());
+    scope.assertNoException();
 
     JSObject* result = constructEmptyObject(globalObject);
-    RETURN_IF_EXCEPTION(scope, encodedJSValue());
     result->putDirect(vm, makeIdentifier(vm, "proxy"), proxy, static_cast<unsigned>(PropertyAttribute::None));
     result->putDirect(vm, makeIdentifier(vm, "revoke"), revoke, static_cast<unsigned>(PropertyAttribute::None));
 
     return JSValue::encode(result);
 }
 
-static EncodedJSValue JSC_HOST_CALL proxyRevocableConstructorThrowError(JSGlobalObject* globalObject, CallFrame*)
-{
-    auto scope = DECLARE_THROW_SCOPE(globalObject->vm());
-    return throwVMTypeError(globalObject, scope, "Proxy.revocable cannot be constructed. It can only be called"_s);
-}
-
 void ProxyConstructor::finishCreation(VM& vm, const char* name, JSGlobalObject* globalObject)
 {
     Base::finishCreation(vm, name, NameAdditionMode::WithStructureTransition);
     putDirect(vm, vm.propertyNames->length, jsNumber(2), PropertyAttribute::DontEnum | PropertyAttribute::ReadOnly);
-    putDirect(vm, makeIdentifier(vm, "revocable"), JSFunction::create(vm, globalObject, 2, "revocable"_s, makeRevocableProxy, NoIntrinsic, proxyRevocableConstructorThrowError));
+    putDirect(vm, makeIdentifier(vm, "revocable"), JSFunction::create(vm, globalObject, 2, "revocable"_s, makeRevocableProxy));
 }
 
 static EncodedJSValue JSC_HOST_CALL constructProxyObject(JSGlobalObject* globalObject, CallFrame* callFrame)
 {
-    auto scope = DECLARE_THROW_SCOPE(globalObject->vm());
-    if (callFrame->newTarget().isUndefined())
-        return throwVMTypeError(globalObject, scope, "new.target of Proxy construct should not be undefined"_s);
-
-    ArgList args(callFrame);
-    JSValue target = args.at(0);
-    JSValue handler = args.at(1);
-    RELEASE_AND_RETURN(scope, JSValue::encode(ProxyObject::create(globalObject, target, handler)));
+    JSValue target = callFrame->argument(0);
+    JSValue handler = callFrame->argument(1);
+    return JSValue::encode(ProxyObject::create(globalObject, target, handler));
 }
 
 static EncodedJSValue JSC_HOST_CALL callProxy(JSGlobalObject* globalObject, CallFrame*)
